--- a/ejbrace/pom.xml
+++ b/ejbrace/pom.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.ferris.ejbrace</groupId>
@@ -18,8 +19,10 @@
     </properties>
     <modules>
         <module>ejbrace-model</module>
+        <module>ejbrace-ejb</module>
 <!--        <module>>ejbrace-jaxws</module>        -->
-    </modules>
+        
+  </modules>
 
     <build>
         <plugins>
@@ -31,6 +34,18 @@
                     <archive>
                         <addMavenDescriptor>false</addMavenDescriptor>
                     </archive>
+                </configuration>
+            </plugin>
+            
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-ejb-plugin</artifactId>
+                <version>2.3</version>
+                <configuration>
+                    <ejbVersion>3.2</ejbVersion>
+                    <archive>
+                        <addMavenDescriptor>false</addMavenDescriptor>
+                    </archive>                    
                 </configuration>
             </plugin>
         </plugins>
