started the ejbrace-ejb project

--- a/ejbrace/ejbrace-service-ear/pom.xml
+++ b/ejbrace/ejbrace-service-ear/pom.xml
@@ -37,7 +37,8 @@
                         <addMavenDescriptor>false</addMavenDescriptor>
                     </archive>
                     <version>7</version>
-                    <applicationName>planets</applicationName>                    
+                    <applicationName>ejbrace-service</applicationName>  
+                    <displayName>${project.build.finalName}</displayName>                  
                     <modules>
                         <ejbModule>
                             <groupId>org.ferris.ejbrace</groupId>
