--- a/ejbrace/ejbrace-web/pom.xml
+++ b/ejbrace/ejbrace-web/pom.xml
@@ -2,29 +2,36 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-    <artifactId>ejbrace-parent</artifactId>
-    <groupId>org.ferris.ejbrace</groupId>
-    <version>1.0.0.0-SNAPSHOT</version>
-  </parent>
+        <artifactId>ejbrace-parent</artifactId>
+        <groupId>org.ferris.ejbrace</groupId>
+        <version>1.0.0.0-SNAPSHOT</version>
+    </parent>
 
     <groupId>org.ferris.ejbrace</groupId>
-    <artifactId>ejbrace-ejb</artifactId>
+    <artifactId>ejbrace-web</artifactId>
     <version>1.0.0.0-SNAPSHOT</version>
-    <packaging>ejb</packaging>
+    <packaging>war</packaging>
 
-    <name>ejbrace-ejb</name>
+    <name>ejbrace-web</name>
 
     <properties>
         <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
-        <ferris.ejbrace-model.version>1.0.0.0-SNAPSHOT</ferris.ejbrace-model.version>
+        <ferris.ejbrace-ejb.version>1.0.0.0-SNAPSHOT</ferris.ejbrace-ejb.version>
     </properties>
-
+    
     <dependencies>
         <dependency>
             <groupId>org.ferris.ejbrace</groupId>
-            <artifactId>ejbrace-model</artifactId>
-            <version>${ferris.ejbrace-model.version}</version>
-            <type>jar</type>
+            <artifactId>ejbrace-ejb</artifactId>
+            <version>${ferris.ejbrace-ejb.version}</version>
+            <type>ejb-client</type>
+            <classifier>client</classifier>
+        </dependency>
+        
+        <dependency>
+            <groupId>javax</groupId>
+            <artifactId>javaee-web-api</artifactId>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 
@@ -39,8 +46,10 @@
                     </compilerArguments>
                 </configuration>
             </plugin>
-            
-            
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-war-plugin</artifactId>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-dependency-plugin</artifactId>
