continued the ejbrace-web project.  Added web.xml and glassfish-web.xml

--- a/ejbrace/ejbrace-ejb/pom.xml
+++ b/ejbrace/ejbrace-ejb/pom.xml
@@ -2,10 +2,10 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-    <artifactId>ejbrace-parent</artifactId>
-    <groupId>org.ferris.ejbrace</groupId>
-    <version>1.0.0.0-SNAPSHOT</version>
-  </parent>
+        <artifactId>ejbrace-parent</artifactId>
+        <groupId>org.ferris.ejbrace</groupId>
+        <version>1.0.0.0-SNAPSHOT</version>
+    </parent>
 
     <groupId>org.ferris.ejbrace</groupId>
     <artifactId>ejbrace-ejb</artifactId>
@@ -65,6 +65,16 @@
                     </execution>
                 </executions>
             </plugin>
+            
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-ejb-plugin</artifactId>
+                <configuration>
+                    <clientExcludes>
+                        <clientExclude>org/ferris/**/*Ejb.*</clientExclude>
+                    </clientExcludes>                  
+                </configuration>
+            </plugin>           
         </plugins>
     </build>
 
