trying to get remote call to work. I think I am having network and JVM issues.

--- a/ejbrace/ejbrace-web-ear/pom.xml
+++ b/ejbrace/ejbrace-web-ear/pom.xml
@@ -43,7 +43,7 @@
                         <webModule>
                             <groupId>org.ferris.ejbrace</groupId>
                             <artifactId>ejbrace-web</artifactId>
-                            <contextRoot>ejbrace</contextRoot>
+                            <contextRoot>/ejbrace</contextRoot>
                         </webModule>
                     </modules>
                 </configuration>
