--- a/ejbrace/pom.xml
+++ b/ejbrace/pom.xml
@@ -21,10 +21,10 @@
         <module>ejbrace-model</module>
         <module>ejbrace-ejb</module>        
         <module>ejbrace-service-ear</module>
-    <module>ejbrace-web</module>
+        <module>ejbrace-web</module>
         <module>ejbrace-web-ear</module>
-        <module>SocketTest</module>
-    </modules>
+    <module>ejbrace-servlet</module>
+  </modules>
 
     <dependencyManagement>
         <dependencies>
