--- a/ejbrace/ejbrace-web/pom.xml
+++ b/ejbrace/ejbrace-web/pom.xml
@@ -26,7 +26,11 @@
             <version>${ferris.ejbrace-ejb.version}</version>
             <type>ejb-client</type>
         </dependency>
-        
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.3.5</version>
+        </dependency>
         <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-web-api</artifactId>
