Added the Servlet, JAX-RS, and JAX-WS which willl return an Account object

--- a/ejbrace/ejbrace-servlet/pom.xml
+++ b/ejbrace/ejbrace-servlet/pom.xml
@@ -23,6 +23,12 @@
             <groupId>javax</groupId>
             <artifactId>javaee-web-api</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.ferris.ejbrace</groupId>
+            <artifactId>ejbrace-model</artifactId>
+            <version>${ferris.ejbrace-model.version}</version>
+            <type>jar</type>
+        </dependency>
     </dependencies>
 
     <build>
