--- a/ejbrace/ejbrace-business-ear/pom.xml
+++ b/ejbrace/ejbrace-business-ear/pom.xml
@@ -8,15 +8,15 @@
     </parent>
 
     <groupId>org.ferris.ejbrace</groupId>
-    <artifactId>ejbrace-service-ear</artifactId>
+    <artifactId>ejbrace-business-ear</artifactId>
     <version>1.0.0.0-SNAPSHOT</version>
     <packaging>ear</packaging>
 
-    <name>ejbrace-service-ear</name>
+    <name>ejbrace-businesss-ear</name>
     
     <properties>
         <ferris.ejbrace-ejb.version>1.0.0.0-SNAPSHOT</ferris.ejbrace-ejb.version>
-        <ferris.ejbrace-servlet.version>1.0.0.0-SNAPSHOT</ferris.ejbrace-servlet.version>
+        <ferris.ejbrace-service.version>1.0.0.0-SNAPSHOT</ferris.ejbrace-service.version>
     </properties>
     
     <dependencies>
@@ -28,8 +28,8 @@
         </dependency>
         <dependency>
             <groupId>org.ferris.ejbrace</groupId>
-            <artifactId>ejbrace-servlet</artifactId>
-            <version>${ferris.ejbrace-servlet.version}</version>
+            <artifactId>ejbrace-service</artifactId>
+            <version>${ferris.ejbrace-service.version}</version>
             <type>war</type>
         </dependency>
     </dependencies>       
@@ -53,8 +53,8 @@
                         </ejbModule>
                         <webModule>
                             <groupId>org.ferris.ejbrace</groupId>
-                            <artifactId>ejbrace-servlet</artifactId>
-                            <contextRoot>/ejbrace-servlet</contextRoot>
+                            <artifactId>ejbrace-service</artifactId>
+                            <contextRoot>/ejbrace-service</contextRoot>
                         </webModule>
                     </modules>
                 </configuration>
