--- a/ejbrace/ejbrace-service/pom.xml
+++ b/ejbrace/ejbrace-service/pom.xml
@@ -8,11 +8,11 @@
   </parent>
 
     <groupId>org.ferris.ejbrace</groupId>
-    <artifactId>ejbrace-servlet</artifactId>
+    <artifactId>ejbrace-service</artifactId>
     <version>1.0.0.0-SNAPSHOT</version>
     <packaging>war</packaging>
 
-    <name>ejbrace-servlet</name>
+    <name>ejbrace-service</name>
 
     <properties>
         <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
