had to do some major updates to Account bean because returning the object from the JAX-RS call was failing for a number of reasons when trying to convert the bean to JSON

--- a/ejbrace/ejbrace-service/pom.xml
+++ b/ejbrace/ejbrace-service/pom.xml
@@ -20,6 +20,11 @@
     
     <dependencies>
         <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.3.2</version>
+        </dependency>
+        <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-web-api</artifactId>
         </dependency>
