--- a/ejbrace/ejbrace-business-ear/pom.xml
+++ b/ejbrace/ejbrace-business-ear/pom.xml
@@ -12,7 +12,7 @@
     <version>1.0.0.0-SNAPSHOT</version>
     <packaging>ear</packaging>
 
-    <name>ejbrace-businesss-ear</name>
+    <name>ejbrace-business-ear</name>
     
     <properties>
         <ferris.ejbrace-ejb.version>1.0.0.0-SNAPSHOT</ferris.ejbrace-ejb.version>
