--- a/ejbrace/ejbrace-web/pom.xml
+++ b/ejbrace/ejbrace-web/pom.xml
@@ -32,6 +32,11 @@
             <version>4.3.5</version>
         </dependency>
         <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.3.2</version>
+        </dependency>
+        <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-web-api</artifactId>
             <scope>provided</scope>
