- AccountSingleton returns static number of objects - For war inside business-ear, change scope of the dependency on the model to provided - Add a local ejb in the presentation war, just for fun

--- a/ejbrace/ejbrace-service/pom.xml
+++ b/ejbrace/ejbrace-service/pom.xml
@@ -33,6 +33,7 @@
             <artifactId>ejbrace-model</artifactId>
             <version>${ferris.ejbrace-model.version}</version>
             <type>jar</type>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 
